*** WooCommerce Dintero Plugin Changelog ***

2020-03-10

 * test on each payment conditions
 * fixed on cancel order and display blank page
 * fixed submit and return blank screen when not check "I have read and agree..." on page My Account > Order > Pay
 * fixed when click cancel from Dintero page, it shows thank you page


2020-02-28

 * updated for phpcs compatibilities and minor adjustments

2020-02-27

 * commented out calling previous version of plugin

2020-02-26

 * adjusted display on embed and not-express settings

2020-02-25

 * fixed bugs

2020-02-20

 * updated and fixed bugs

2020-02-18

 * initial updates on woocommerce dintero plugin feature