@@ -1,5 +1,9 @@
 *** WooCommerce Dintero Plugin Changelog ***
 
+2020-03-17
+
+ * fixed checkout page display glitches for some specific themes
+
 2020-03-10
 
  * test on each payment conditions
